Sugati/src/objects/MulticomSetting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for Multicom  integration</description>
    <fields>
        <fullName>API_Endpoint_URL__c</fullName>
        <inlineHelpText>HTTPs url for the Multicom requests</inlineHelpText>
        <label>API Endpoint URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Syndicator_Id__c</fullName>
        <inlineHelpText>Syndicator Id provided by Multicom</inlineHelpText>
        <label>Syndicator Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Syndicator_Password__c</fullName>
        <inlineHelpText>Syndicator Password provided by Multlicom</inlineHelpText>
        <label>Syndicator Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Multicom Setting</label>
</CustomObject>